qt/gen_qundoview.h

class QIcon;
class QMetaObject;
class QModelIndex;
class QRect;
class QUndoGroup;
class QUndoStack;
class QUndoView;
class QWidget;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QIcon QIcon;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QUndoGroup QUndoGroup;
typedef struct QUndoStack QUndoStack;
typedef struct QUndoView QUndoView;
typedef struct QWidget QWidget;
bool QUndoView_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QUndoView_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QUndoView_override_virtual_metric(void* self, intptr_t slot);
int QUndoView_virtualbase_metric(const void* self, int param1);
bool QUndoView_override_virtual_initPainter(void* self, intptr_t slot);
void QUndoView_virtualbase_initPainter(const void* self, QPainter* painter);
bool QUndoView_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QUndoView_virtualbase_redirected(const void* self, QPoint* offset);
bool QUndoView_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QUndoView_virtualbase_sharedPainter(const void* self);
bool QUndoView_override_virtual_childEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_childEvent(void* self, QChildEvent* event);
bool QUndoView_override_virtual_customEvent(void* self, intptr_t slot);
void QUndoView_virtualbase_customEvent(void* self, QEvent* event);
bool QUndoView_override_virtual_connectNotify(void* self, intptr_t slot);
void QUndoView_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QUndoView_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QUndoView_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QUndoView_staticMetaObject();
void QUndoView_delete(QUndoView* self);