qt/gen_qundoview.nim

proc fQUndoView_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QUndoView_virtualbase_nativeEvent".}
proc fcQUndoView_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_nativeEvent".}
proc fQUndoView_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QUndoView_virtualbase_metric".}
proc fcQUndoView_override_virtual_metric(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_metric".}
proc fQUndoView_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QUndoView_virtualbase_initPainter".}
proc fcQUndoView_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_initPainter".}
proc fQUndoView_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QUndoView_virtualbase_redirected".}
proc fcQUndoView_override_virtual_redirected(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_redirected".}
proc fQUndoView_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QUndoView_virtualbase_sharedPainter".}
proc fcQUndoView_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_sharedPainter".}
proc fQUndoView_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_childEvent".}
proc fcQUndoView_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_childEvent".}
proc fQUndoView_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QUndoView_virtualbase_customEvent".}
proc fcQUndoView_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_customEvent".}
proc fQUndoView_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QUndoView_virtualbase_connectNotify".}
proc fcQUndoView_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_connectNotify".}
proc fQUndoView_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QUndoView_virtualbase_disconnectNotify".}
proc fcQUndoView_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QUndoView_override_virtual_disconnectNotify".}
proc fcQUndoView_staticMetaObject(): pointer {.importc: "QUndoView_staticMetaObject".}
proc fcQUndoView_delete(self: pointer) {.importc: "QUndoView_delete".}


func init*(T: type QUndoView, h: ptr cQUndoView): QUndoView =
  T(h: h)
proc create*(T: type QUndoView, parent: gen_qwidget.QWidget): QUndoView =

  QUndoView.init(fcQUndoView_new(parent.h))
proc create*(T: type QUndoView, ): QUndoView =

  QUndoView.init(fcQUndoView_new2())
proc create2*(T: type QUndoView, stack: gen_qundostack.QUndoStack): QUndoView =

  QUndoView.init(fcQUndoView_new3(stack.h))
proc create2*(T: type QUndoView, group: gen_qundogroup.QUndoGroup): QUndoView =

  QUndoView.init(fcQUndoView_new4(group.h))
proc create*(T: type QUndoView, stack: gen_qundostack.QUndoStack, parent: gen_qwidget.QWidget): QUndoView =

  QUndoView.init(fcQUndoView_new5(stack.h, parent.h))
proc create2*(T: type QUndoView, group: gen_qundogroup.QUndoGroup, parent: gen_qwidget.QWidget): QUndoView =

  QUndoView.init(fcQUndoView_new6(group.h, parent.h))
proc metaObject*(self: QUndoView, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQUndoView_metaObject(self.h))

proc metacast*(self: QUndoView, param1: cstring): pointer =

  fcQUndoView_metacast(self.h, param1)

proc metacall*(self: QUndoView, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQUndoView_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QUndoView, s: cstring): string =

  let v_ms = fcQUndoView_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QUndoView, s: cstring): string =

  let v_ms = fcQUndoView_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc stack*(self: QUndoView, ): gen_qundostack.QUndoStack =

  gen_qundostack.QUndoStack(h: fcQUndoView_stack(self.h))

proc group*(self: QUndoView, ): gen_qundogroup.QUndoGroup =

  gen_qundogroup.QUndoGroup(h: fcQUndoView_group(self.h))

proc setEmptyLabel*(self: QUndoView, label: string): void =

  fcQUndoView_setEmptyLabel(self.h, struct_miqt_string(data: label, len: csize_t(len(label))))

proc emptyLabel*(self: QUndoView, ): string =

  let v_ms = fcQUndoView_emptyLabel(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setCleanIcon*(self: QUndoView, icon: gen_qicon.QIcon): void =

  fcQUndoView_setCleanIcon(self.h, icon.h)

proc cleanIcon*(self: QUndoView, ): gen_qicon.QIcon =

  gen_qicon.QIcon(h: fcQUndoView_cleanIcon(self.h))

proc setStack*(self: QUndoView, stack: gen_qundostack.QUndoStack): void =

  fcQUndoView_setStack(self.h, stack.h)

proc setGroup*(self: QUndoView, group: gen_qundogroup.QUndoGroup): void =

  fcQUndoView_setGroup(self.h, group.h)

proc tr2*(_: type QUndoView, s: cstring, c: cstring): string =

  let v_ms = fcQUndoView_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QUndoView, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQUndoView_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QUndoView, s: cstring, c: cstring): string =

  let v_ms = fcQUndoView_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QUndoView, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQUndoView_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc callVirtualBase_metaObject(self: QUndoView, ): gen_qobjectdefs.QMetaObject =


  gen_qobjectdefs.QMetaObject(h: fQUndoView_virtualbase_metaObject(self.h))

type QUndoViewmetaObjectBase* = proc(): gen_qobjectdefs.QMetaObject
proc onmetaObject*(self: QUndoView, slot: proc(super: QUndoViewmetaObjectBase): gen_qobjectdefs.QMetaObject) =
  # TODO check subclass
  type Cb = proc(super: QUndoViewmetaObjectBase): gen_qobjectdefs.QMetaObject
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_metaObject(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QUndoView_metaObject(self: ptr cQUndoView, slot: int): pointer {.exportc: "miqt_exec_callback_QUndoView_metaObject ".} =
  type Cb = proc(super: QUndoViewmetaObjectBase): gen_qobjectdefs.QMetaObject
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(): auto =
    callVirtualBase_metaObject(QUndoView(h: self), )

  let virtualReturn = nimfunc[](superCall )

  virtualReturn.h
proc callVirtualBase_metacast(self: QUndoView, param1: cstring): pointer =


  fQUndoView_virtualbase_metacast(self.h, param1)

type QUndoViewmetacastBase* = proc(param1: cstring): pointer
proc onmetacast*(self: QUndoView, slot: proc(super: QUndoViewmetacastBase, param1: cstring): pointer) =
  # TODO check subclass
  type Cb = proc(super: QUndoViewmetacastBase, param1: cstring): pointer
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_metacast(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QUndoView_metacast(self: ptr cQUndoView, slot: int, param1: cstring): pointer {.exportc: "miqt_exec_callback_QUndoView_metacast ".} =
  type Cb = proc(super: QUndoViewmetacastBase, param1: cstring): pointer
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(param1: cstring): auto =
    callVirtualBase_metacast(QUndoView(h: self), param1)
  let slotval1 = (param1)


  let virtualReturn = nimfunc[](superCall, slotval1 )

  virtualReturn
proc callVirtualBase_metacall(self: QUndoView, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQUndoView_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QUndoViewmetacallBase* = proc(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
proc onmetacall*(self: QUndoView, slot: proc(super: QUndoViewmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint) =
  # TODO check subclass
  type Cb = proc(super: QUndoViewmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_metacall(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QUndoView_metacall(self: ptr cQUndoView, slot: int, param1: cint, param2: cint, param3: pointer): cint {.exportc: "miqt_exec_callback_QUndoView_metacall ".} =
  type Cb = proc(super: QUndoViewmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): auto =
    callVirtualBase_metacall(QUndoView(h: self), param1, param2, param3)
  let slotval1 = gen_qobjectdefs.QMetaObjectCall(param1)

  let slotval2 = param2

  let slotval3 = param3


  let virtualReturn = nimfunc[](superCall, slotval1, slotval2, slotval3 )

  virtualReturn
proc callVirtualBase_visualRect(self: QUndoView, index: gen_qabstractitemmodel.QModelIndex): gen_qrect.QRect =


  gen_qrect.QRect(h: fQUndoView_virtualbase_visualRect(self.h, index.h))

type QUndoViewvisualRectBase* = proc(index: gen_qabstractitemmodel.QModelIndex): gen_qrect.QRect
proc onvisualRect*(self: QUndoView, slot: proc(super: QUndoViewvisualRectBase, index: gen_qabstractitemmodel.QModelIndex): gen_qrect.QRect) =
  # TODO check subclass
  type Cb = proc(super: QUndoViewvisualRectBase, index: gen_qabstractitemmodel.QModelIndex): gen_qrect.QRect
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_visualRect(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QUndoView_visualRect(self: ptr cQUndoView, slot: int, index: pointer): pointer {.exportc: "miqt_exec_callback_QUndoView_visualRect ".} =
  type Cb = proc(super: QUndoViewvisualRectBase, index: gen_qabstractitemmodel.QModelIndex): gen_qrect.QRect
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(index: gen_qabstractitemmodel.QModelIndex): auto =
    callVirtualBase_visualRect(QUndoView(h: self), index)
  let slotval1 = gen_qabstractitemmodel.QModelIndex(h: index)


  let virtualReturn = nimfunc[](superCall, slotval1 )

  virtualReturn.h
proc callVirtualBase_scrollTo(self: QUndoView, index: gen_qabstractitemmodel.QModelIndex, hint: gen_qabstractitemview.QAbstractItemViewScrollHint): void =


  fQUndoView_virtualbase_scrollTo(self.h, index.h, cint(hint))

type QUndoViewscrollToBase* = proc(index: gen_qabstractitemmodel.QModelIndex, hint: gen_qabstractitemview.QAbstractItemViewScrollHint): void
proc onscrollTo*(self: QUndoView, slot: proc(super: QUndoViewscrollToBase, index: gen_qabstractitemmodel.QModelIndex, hint: gen_qabstractitemview.QAbstractItemViewScrollHint): void) =
  # TODO check subclass
  type Cb = proc(super: QUndoViewscrollToBase, index: gen_qabstractitemmodel.QModelIndex, hint: gen_qabstractitemview.QAbstractItemViewScrollHint): void
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQUndoView_override_virtual_scrollTo(self.h, cast[int](addr tmp[]))
